AC_INIT([strategoxt],[0.11pre],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

# set the prefix immediately to the default prefix
test "x$prefix" = xNONE && prefix=$ac_default_prefix

### ATerm Library #####################
AC_ARG_WITH(aterm, 
  AC_HELP_STRING([--with-aterm=DIR], [use ATerm Library at DIR @<:@PREFIX@:>@]),
  ATERM=$withval, 
  ATERM="$prefix"
)
AC_SUBST(ATERM)

### Choice Point Library #############
AC_ARG_WITH(cpl, 
  AC_HELP_STRING([--with-cpl=DIR], [use Choice Point Library at DIR (optional)]),
  CPL=$withval usecpl=true, 
  usecpl=false
)
AC_SUBST(CPL)
AM_CONDITIONAL(USECPL, test x$usecpl = xtrue)

### XTC #########################
AC_ARG_WITH(repository,
  AC_HELP_STRING([--with-repository=FILE], [use XTC repository at FILE @<:@PREFIX/share/strategoxt/XTC@:>@]),
  REPOSITORY="$withval",
  REPOSITORY="$prefix/share/$PACKAGE_NAME/XTC"
)
AC_SUBST(REPOSITORY)

### SDF ###############################
AC_ARG_WITH(sdf, 
  AC_HELP_STRING([--with-sdf=SDF], [use SDF bundle at SDF @<:@PREFIX@:>@]),
  SDF="$withval", 
  SDF="$prefix"
)
AC_SUBST(SDF)

AC_ARG_WITH(sglr, 
  AC_HELP_STRING([--with-sglr=DIR], [use SGLR bundle at DIR @<:@SDF@:>@]),
  SGLR="$withval", 
  SGLR="$SDF"
)
AC_SUBST(SGLR)

AC_ARG_WITH([pgen], 
  AC_HELP_STRING([--with-pgen=DIR], [use SDF parser generator at DIR @<:@SDF@:>@]),
  [PGEN=$withval],
  [PGEN=$SDF]
)
AC_SUBST([PGEN])

AC_ARG_WITH([pt-support],
  AC_HELP_STRING([--with-pt-support=DIR], [use pt-support at DIR @<:@SDF@:>@]),
  [PT_SUPPORT=$withval],
  [PT_SUPPORT=$SDF]
)
AC_SUBST([PT_SUPPORT])

AC_ARG_WITH([asf-library],
  AC_HELP_STRING([--with-asf-library=DIR], [use ASF library at DIR @<:@SDF@:>@]),
  [ASF_LIBRARY=$withval],
  [ASF_LIBRARY=$SDF]
)
AC_SUBST([ASF_LIBRARY])

### BOOTSTRAP STRATEGOXT ##############

AC_ARG_WITH([strategoxt], 
  AC_HELP_STRING([--with-strategoxt=DIR], [use StrategoXT at DIR (bootstrap only) @<:@PREFIX@:>@]),
  [STRATEGOXT="$withval"], 
  [STRATEGOXT="$prefix"]
)
AC_SUBST(STRATEGOXT)

### PROGRAMS ##########################

AC_CHECK_PROGS(RPMBUILD, rpmbuild rpm)
AC_SUBST(RPMBUILD)

AM_CONFIG_HEADER([config.h])

### PACKAGES ##########################

PKGS="autoxt srts xtc sdf-import stratego-front asfix-tools strc gpp c-tools ssl concrete-syntax aterm-front sdf-front dot-tools graph-tools sdf-tools aterm-tools stratego-regular xml-front stratego-tools boxenv stratego-util"
AC_SUBST(PKGS)

top_srcdir=`pwd`
BUILD_SRTS=${top_srcdir}/pre-pkgs/build
INSTALL_XTC=${top_srcdir}/pre-pkgs/install

DETECT_SVN_REVISION

### OUTPUT #############################

AC_OUTPUT(
	Makefile 
   	news-archive/Makefile
  	strategoxt.spec
)

### SUBPACKAGES ########################

AB_CONFIG_PKG(autoxt, )

if test x$usecpl = xtrue
then
AB_CONFIG_PKG(srts,
   --with-aterm=${ATERM}
   --with-strc=${STRATEGOXT}
   --with-ssl=${STRATEGOXT}
   --with-cpl=${CPL}
)
else
AB_CONFIG_PKG(srts,
   --with-aterm=${ATERM}
   --with-strc=${STRATEGOXT}
   --with-ssl=${STRATEGOXT}
)
fi

AB_CONFIG_PKG(xtc,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

# sdf-import registers the location of the installed SRTS,
# therefore we configure with this SRTS and not BUILD_SRTS

AB_CONFIG_PKG(sdf-import,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-pt-support=${PT_SUPPORT}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${prefix}  
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(strc,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(c-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(stratego-front,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(ssl,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(asfix-tools,
   --with-srts=${prefix}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(gpp,
   --with-srts=${prefix}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(concrete-syntax,
   --with-srts=${prefix}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(aterm-front,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(aterm-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(graph-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(sdf-front,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(sdf-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(dot-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(stratego-regular,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(xml-front,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(stratego-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-asf-library=${ASF_LIBRARY}
   --with-strategoxt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(boxenv,
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(stratego-util,
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)