AC_INIT([asfix-tools],[0.9.6pre],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_REVISION($Id: configure.in,v 1.5 2003/01/25 23:13:32 stratego Exp $)

AC_PROG_CC
AC_PROG_INSTALL

TOOLS="templates asfix implode asfix-yield visamb termid explode-asfix2me "
UNRELEASED=""
RELEASED="templates asfix implode asfix-yield visamb termid explode-asfix2me"

AC_SUBST(TOOLS)
AC_SUBST(RELEASED)
AC_SUBST(UNRELEASED)

AC_OUTPUT( 
	Makefile 
	VERSION 
	src/Makefile 
	src/templates/Makefile src/templates/data/Makefile
  src/asfix/Makefile src/asfix/data/Makefile
  src/implode/Makefile src/implode/data/Makefile
  src/asfix-yield/Makefile src/asfix-yield/data/Makefile
  src/visamb/Makefile src/visamb/data/Makefile
  src/termid/Makefile src/termid/data/Makefile
  src/explode-asfix2me/Makefile
  src/explode-asfix2me/data/Makefile
  xtc/Makefile
)