AC_INIT([asfix-tools],[0.9.6pre],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL

TOOLS="templates implode asfix-yield visamb termid explode-asfix2me "
UNRELEASED=""
RELEASED="templates implode asfix-yield visamb termid explode-asfix2me"

AC_SUBST(TOOLS)
AC_SUBST(RELEASED)
AC_SUBST(UNRELEASED)

AC_CONFIG_FILES([
  Makefile 
  VERSION
  sig/Makefile 
  lib/Makefile
  xtc/Makefile
  test/Makefile

  src/Makefile 

  src/templates/Makefile
  src/templates/data/Makefile

  src/asfix/Makefile
  src/asfix/data/Makefile

  src/implode/Makefile
  src/implode/data/Makefile

  src/asfix-yield/Makefile
  src/asfix-yield/data/Makefile

  src/visamb/Makefile
  src/visamb/data/Makefile

  src/termid/Makefile
  src/termid/data/Makefile

  src/explode-asfix2me/Makefile
  src/explode-asfix2me/data/Makefile
])
AC_OUTPUT