AC_PREREQ([2.58])
AC_INIT([aterm-front],[0.16M1],[stratego-bugs@cs.uu.nl])
AC_CONFIG_AUX_DIR([../config])
AM_INIT_AUTOMAKE

XT_INTERNAL_USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CONFIG_FILES([ 
  Makefile 
 
  syn/Makefile
  sig/Makefile
  pp/Makefile
  pp/tests/Makefile

  trans/Makefile
])
AC_OUTPUT
