dnl Copyright (C) 2001 Merijn de Jonge <mdejonge@cwi.nl>
dnl                    Eelco Visser <visser@acm.org>
dnl                    Joost Visser <jvisser@cwi.nl>
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2, or (at your option)
dnl any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
dnl 02111-1307, USA.

AC_INIT([aterm-tools],[0.9beta10],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

dnl Package switches.

USE_XT_PACKAGES

AC_REVISION($Id: configure.in,v 1.3 2003/01/05 19:49:29 stratego Exp $)

AC_PROG_CC
AC_PROG_INSTALL

TOOLS="atermdiff treeviz utils "
UNRELEASED=""
RELEASED="atermdiff treeviz utils"

AC_SUBST(TOOLS)
AC_SUBST(RELEASED)
AC_SUBST(UNRELEASED)

AC_OUTPUT( 
	Makefile 
	VERSION 
	
	src/Makefile 
	src/templates/Makefile 
	src/templates/data/Makefile 
	
        src/atermdiff/Makefile src/atermdiff/data/Makefile
        src/treeviz/Makefile src/treeviz/data/Makefile
        src/utils/Makefile src/utils/data/Makefile

)
