AC_INIT([aterm-tools],[0.9],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

dnl Package switches.

USE_XT_PACKAGES

AC_REVISION($Id: configure.in,v 1.5 2003/01/25 23:13:32 stratego Exp $)

AC_PROG_CC
AC_PROG_INSTALL

TOOLS="atermdiff treeviz utils "
UNRELEASED=""
RELEASED="atermdiff treeviz utils"

AC_SUBST(TOOLS)
AC_SUBST(RELEASED)
AC_SUBST(UNRELEASED)

AC_OUTPUT( 
	Makefile 
	VERSION 
	
	src/Makefile 
	src/templates/Makefile 
	src/templates/data/Makefile 
	
        src/atermdiff/Makefile src/atermdiff/data/Makefile
        src/treeviz/Makefile src/treeviz/data/Makefile
        src/utils/Makefile src/utils/data/Makefile

)
