AC_INIT([boxenv],[0.9],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

AC_ARG_WITH(latex, 
  AC_HELP_STRING([--with-latex=DIR], [use LaTeX distribution at DIR @<:@/usr@:>@]),
  LATEX="$withval", 
  LATEX="/usr"
)
AC_SUBST(LATEX)

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([
	VERSION 

	Makefile 
	src/Makefile 
  src/boxenv/Makefile
])
AC_OUTPUT