AC_INIT([boxenv],[0.9.6pre],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_ARG_WITH(latex, 
  AC_HELP_STRING([--with-latex=FILE], [use LaTeX at FILE @<:@search@:>@]),
  latex="$withval",
  latex=""
)

if test -z "$latex"; then
  AC_PATH_PROG([latex],[latex])
fi
AC_SUBST(latex)

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([
	VERSION 

	Makefile 
	src/Makefile 
  src/boxenv/Makefile
])
AC_OUTPUT
