AC_PREREQ([2.58])
AC_INIT([c-tools],[0.14],[stratego-bugs@cs.uu.nl])
AC_CONFIG_AUX_DIR([../config])
AM_INIT_AUTOMAKE

XT_INTERNAL_USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CONFIG_FILES([
  c-tools.pc
  Makefile
  syn/Makefile
  pp/Makefile
  sig/Makefile
  xtc-tools/Makefile
  tests/Makefile
  tests/translation-units/Makefile
])
AC_OUTPUT
