AC_PREREQ([2.58])
AC_INIT([gpp],[0.17M1],[stratego-bugs@cs.uu.nl])
AC_CONFIG_AUX_DIR([../config])
AM_INIT_AUTOMAKE

XT_INTERNAL_USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CONFIG_FILES([
  Makefile 
  syn/Makefile
  syn/box/Makefile
  syn/pp-table/Makefile 
  sig/Makefile
  sig/box/Makefile
  sig/pp-table/Makefile 
  tools/Makefile
  tools2/Makefile
  tools3/Makefile
])
AC_OUTPUT
