AC_INIT([box-tools],[0.9beta10],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([
	Makefile 
	syn/Makefile
  syn/box/Makefile
  syn/pp-table/Makefile 
	sig/Makefile
  sig/box/Makefile
  sig/pp-table/Makefile 
	pp/Makefile 
	trans/Makefile
  trans/2abox/Makefile
  trans/abox2/Makefile 
	xtc-tools/Makefile 
])

AC_OUTPUT
