dnl Copyright (C) 2001 Merijn de Jonge <mdejonge@cwi.nl>
dnl                    Eelco Visser <visser@acm.org>
dnl                    Joost Visser <jvisser@cwi.nl>
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2, or (at your option)
dnl any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
dnl 02111-1307, USA.

dnl $Id: configure.in,v 1.4 2003/01/17 20:24:38 stratego Exp $

AC_INIT([graph-tools],[0.9beta11],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_REVISION($Id: configure.in,v 1.4 2003/01/17 20:24:38 stratego Exp $)

AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROGS(SH, sh)

TOOLS="templates graphxml dot graphterms graphxml-analysis graphxml2dot graphterms2graphxml "
UNRELEASED=""
RELEASED="templates graphxml dot graphterms graphxml-analysis graphxml2dot graphterms2graphxml"

AC_SUBST(TOOLS)
AC_SUBST(RELEASED)
AC_SUBST(UNRELEASED)

AC_OUTPUT( 
	Makefile 
	VERSION 

	src/Makefile 
	
        src/templates/Makefile src/templates/data/Makefile
        src/graphxml/Makefile src/graphxml/data/Makefile
        src/dot/Makefile src/dot/data/Makefile src/graphterms/Makefile
        src/graphterms/data/Makefile src/graphxml-analysis/Makefile
        src/graphxml-analysis/data/Makefile src/graphxml2dot/Makefile
        src/graphxml2dot/data/Makefile
        src/graphterms2graphxml/Makefile
        src/graphterms2graphxml/data/Makefile

)
