AC_INIT([graph-tools],[0.9.2],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_REVISION($Id: configure.in,v 1.5 2003/01/25 23:13:35 stratego Exp $)

AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROGS(SH, sh)

TOOLS="templates graphxml dot graphterms graphxml-analysis graphxml2dot graphterms2graphxml "
UNRELEASED=""
RELEASED="templates graphxml dot graphterms graphxml-analysis graphxml2dot graphterms2graphxml"

AC_SUBST(TOOLS)
AC_SUBST(RELEASED)
AC_SUBST(UNRELEASED)

AC_OUTPUT( 
	Makefile 
	VERSION 

	src/Makefile 
	
        src/templates/Makefile src/templates/data/Makefile
        src/graphxml/Makefile src/graphxml/data/Makefile
        src/dot/Makefile src/dot/data/Makefile src/graphterms/Makefile
        src/graphterms/data/Makefile src/graphxml-analysis/Makefile
        src/graphxml-analysis/data/Makefile src/graphxml2dot/Makefile
        src/graphxml2dot/data/Makefile
        src/graphterms2graphxml/Makefile
        src/graphterms2graphxml/data/Makefile

)