AC_INIT([sc],[0.9.3],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

EXE=""
AC_ARG_WITH(exe,    
  [  --with-exe              Extension of executables], 
  EXE=".exe", 
  EXE=""
)
AC_SUBST(EXE)

libexecdir=\$\{exec_prefix\}/libexec/$PACKAGE
AC_SUBST(libexecdir)

AC_PROG_CC
AC_PROG_INSTALL

AC_SUBST(CC)

AC_OUTPUT([
	Makefile 
	spec/Makefile 

	spec/c/Makefile 
	spec/front/Makefile 
	spec/front/data/Makefile 
	spec/match/Makefile 
	spec/match/data/Makefile 
	spec/opt/Makefile 
	spec/sc/Makefile 
	spec/sig/Makefile 

	spec/lib/Makefile 

	spec/log/Makefile 

	spec/test1/Makefile 
	spec/test2/Makefile 
	spec/test3/Makefile 
	spec/testlib/Makefile 
	spec/testspec/Makefile 

	spec/si/Makefile 
	spec/si/stratego 
	spec/si/data/Makefile
])