# Copyright (C) 1998-2002 Eelco Visser <visser@acm.org>
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.

AC_INIT(spec/front/inlining.r)
AM_INIT_AUTOMAKE(sc,0.9beta2)

AC_ARG_WITH(cgen,    
  [  --with-cgen      Specify location of CGEN library, default: \$prefix], 
  CGEN=$withval, 
  CGEN="$prefix"
)
AC_SUBST(CGEN)

AC_ARG_WITH(aterm,   
  [  --with-aterm     Specify location of aterm library, default: \$prefix], 
  ATERM=$withval, 
  ATERM="$prefix"
)
AC_SUBST(ATERM)

#AC_ARG_WITH(cpl, 
#  [  --with-cpl            Use the choice point library], 
#  CPL=$withval usecpl=true, 
#  usecpl=false
#)
#AC_SUBST(CPL)
#AM_CONDITIONAL(USECPL, test x$usecpl = xtrue)

AC_ARG_WITH(gpp,     
  [  --with-gpp       Specify location of gpp, default: \$prefix], 
  GPP=$withval, 
  GPP="$prefix"
)
AC_SUBST(GPP)

AC_ARG_WITH(gpp-boot,     
  [  --with-gpp-boot  Specify location of gpp, default: \$prefix], 
  GPP=$withval, 
  GPP="$GPP"
)
AC_SUBST(GPP)

AC_ARG_WITH(boot,    
  [  --with-boot      Specify Stratego Compiler to use in bootstrapping, default: \$prefix], 
  STRATEGOBOOT=$withval, 
  STRATEGOBOOT="$prefix")
AC_SUBST(STRATEGOBOOT)

AC_ARG_WITH(sc-boot, 
  [  --with-sc-boot   Specify where to install bootstrapped sources, default: \$pwd], 
  SCBOOT=$withval, 
  SCBOOT="$pwd"
)
AC_SUBST(SCBOOT)

AC_ARG_WITH(ssl,     
  [  --with-ssl       Specify location of Stratego Library , default: \$prefix], 
  STRATEGOLIB=$withval, 
  STRATEGOLIB="$prefix"
)
AC_SUBST(STRATEGOLIB)

AC_ARG_WITH(srts,    
  [  --with-srts      Specify location of Stratego Run-time System, default: \$prefix], 
  STRATEGORTS=$withval, 
  STRATEGORTS="$prefix"
)
AC_SUBST(STRATEGORTS)

AC_ARG_WITH(stratego-front,    
  [  --with-stratego-front   Specify location of Stratego Front package, default: \$prefix], 
  STRATEGOFRONT=$withval, 
  STRATEGOFRONT="$prefix"
)
AC_SUBST(STRATEGOFRONT)

EXE=""
AC_ARG_WITH(exe,    
  [  --with-exe              Extension of executables], 
  EXE=".exe", 
  EXE=""
)
AC_SUBST(EXE)

AC_ARG_WITH(rpmprefix,
  [  --with-rpmprefix        Specify location of installation prefix for rpm: /usr],
  RPMPREFIX=$withval,
  RPMPREFIX="/usr"
)
AC_SUBST(RPMPREFIX)

AC_ARG_WITH(rpmdir, 
  [  --with-rpmdir           Specify location of rpm directory: /usr/src/redhat/], 
  RPMDIR=$withval, 
  RPMDIR="/usr/src/redhat/"
)
AC_SUBST(RPMDIR)

AC_ARG_WITH(rpmtmp, 
  [  --with-rpmtmp           Specify location of rpm temporary directory: /tmp], 
  RPMTMP=$withval, 
  RPMTMP="/tmp"
)
AC_SUBST(RPMTMP)

libexecdir=\$\{exec_prefix\}/libexec/$PACKAGE-$VERSION
AC_SUBST(libexecdir)

AC_REVISION($Id: configure.in,v 1.26 2002/11/16 12:54:55 stratego Exp $)

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_INSTALL

AM_CONFIG_HEADER(config.h)

TOP_SRCDIR=`pwd`
AC_SUBST(TOP_SRCDIR)

changequote(,)dnl
case $VERSION in
 [0-9]*.[0-9]*[a-z])  DIST_ALPHA="README-alpha";;
 [0-9]*.[0-9]*.[0-9]*) DIST_ALPHA="README-alpha";;
 *) DIST_ALPHA=;;
esac
changequote([, ])dnl
AC_SUBST(DIST_ALPHA)

AC_SUBST(CC)

AC_OUTPUT( \
	Makefile \
	README \
	spec/config.h \
	spec/Makefile \
	spec/make_rules \
	spec/c/Makefile \
	spec/front/Makefile \
	spec/front/data/Makefile \
	spec/log/Makefile \
	spec/match/Makefile \
	spec/match/data/Makefile \
	spec/opt/Makefile \
	spec/sc/Makefile \
	spec/si/Makefile \
	spec/si/stratego \
	spec/si/data/Makefile \
	spec/sig/Makefile \
	spec/lib/Makefile \
	spec/syn/Makefile \
	spec/test1/Makefile \
	spec/test2/Makefile \
	spec/test3/Makefile \
	spec/testlib/Makefile \
	spec/testspec/Makefile \
	spec/sdf/Makefile \
)
