 # Copyright (C) 1998-2002 Eelco Visser <visser@acm.org>
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.

AC_INIT(spec/front/inlining.str)
AM_INIT_AUTOMAKE(sc,0.9beta8)

USE_XT_PACKAGES

EXE=""
AC_ARG_WITH(exe,    
  [  --with-exe              Extension of executables], 
  EXE=".exe", 
  EXE=""
)
AC_SUBST(EXE)

libexecdir=\$\{exec_prefix\}/libexec/$PACKAGE
AC_SUBST(libexecdir)

AC_REVISION($Id: configure.in,v 1.35 2002/12/22 13:51:07 stratego Exp $)

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_INSTALL

#AM_CONFIG_HEADER(config.h)

TOP_SRCDIR=`pwd`
AC_SUBST(TOP_SRCDIR)

changequote(,)dnl
case $VERSION in
 [0-9]*.[0-9]*[a-z])  DIST_ALPHA="README-alpha";;
 [0-9]*.[0-9]*.[0-9]*) DIST_ALPHA="README-alpha";;
 *) DIST_ALPHA=;;
esac
changequote([, ])dnl
AC_SUBST(DIST_ALPHA)

AC_SUBST(CC)

AC_OUTPUT( \
	Makefile \
	README \
	spec/config.h \
	spec/Makefile \
	spec/make_rules \
	spec/c/Makefile \
	spec/front/Makefile \
	spec/front/data/Makefile \
	spec/log/Makefile \
	spec/match/Makefile \
	spec/match/data/Makefile \
	spec/opt/Makefile \
	spec/sc/Makefile \
	spec/sc/sc-version.str \
	spec/si/Makefile \
	spec/si/stratego \
	spec/si/data/Makefile \
	spec/sig/Makefile \
	spec/lib/Makefile \
	spec/syn/Makefile \
	spec/test1/Makefile \
	spec/test2/Makefile \
	spec/test3/Makefile \
	spec/testlib/Makefile \
	spec/testspec/Makefile \
	spec/sdf/Makefile \
)
