AC_INIT([sc],[0.9.1],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

EXE=""
AC_ARG_WITH(exe,    
  [  --with-exe              Extension of executables], 
  EXE=".exe", 
  EXE=""
)
AC_SUBST(EXE)

libexecdir=\$\{exec_prefix\}/libexec/$PACKAGE
AC_SUBST(libexecdir)

AC_REVISION($Id: configure.in,v 1.41 2003/01/25 23:13:35 stratego Exp $)

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_INSTALL

AC_SUBST(CC)

AC_OUTPUT( \
	Makefile \
	README \
	spec/Makefile \
	spec/c/Makefile \
	spec/front/Makefile \
	spec/front/data/Makefile \
	spec/log/Makefile \
	spec/match/Makefile \
	spec/match/data/Makefile \
	spec/opt/Makefile \
	spec/sc/Makefile \
	spec/sc/sc-version.str \
	spec/si/Makefile \
	spec/si/stratego \
	spec/si/data/Makefile \
	spec/sig/Makefile \
	spec/lib/Makefile \
	spec/syn/Makefile \
	spec/test1/Makefile \
	spec/test2/Makefile \
	spec/test3/Makefile \
	spec/testlib/Makefile \
	spec/testspec/Makefile \
)