AC_INIT([sdf-front],[0.9.6pre],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([
  Makefile

  syn/Makefile
  syn/version-2.1/Makefile
  syn/version-pgen-2.0/Makefile

  sig/Makefile
  sig/version-2.1/Makefile
  sig/version-pgen-2.0/Makefile

  pp/Makefile
  parse/Makefile
  xtc/Makefile
])
AC_OUTPUT